# handoff

./: .gitignore  .test_profiles.json  AGENTS.md  ARCHITECTURE.md  BADGES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  GITHUB_READY_REPORT.md  HANDOFF_COMPLETE_SUMMARY.md  HANDOFF_IMPROVEMENTS_SUMMARY.md  IMPLEMENTATION_PLAN.md  MARKETPLACE.md  MULTI_TERMINAL_FIX_COMPLETE.md  README.md  SECURITY.md  coverage.json  fix_box_lines.py  fix_long_lines.py  plan-uci-fixes.md  plan.md  plan_type_hints.md  pyproject.toml  sub_agent_invocation_example.py  test_active_work_section.py  test_coverage.json  test_fix_verification.py
.backup/: pyproject.toml
.claude/: quality_log.jsonl
.claude-plugin/: plugin.json
.evidence/: adversarial_critic.json  adversarial_logic.json  adversarial_performance.json  adversarial_qa.json  adversarial_security.json  gto-history-04d2e72e6b5c.jsonl  gto-history-0527089898f2.jsonl  gto-history-1223fbc66993.jsonl  gto-history-13cbe4c1b57e.jsonl  gto-history-1ca61be4725d.jsonl  gto-history-281e4a008e9a.jsonl  gto-history-42134f3f3348.jsonl  gto-history-49b10830fb13.jsonl  gto-history-5e92931650fd.jsonl  gto-history-72e9bb3c202b.jsonl  gto-history-789dab5ff595.jsonl  gto-history-813406e0e78d.jsonl  gto-history-83eb95c235c8.jsonl  gto-history-c9f9861ef0da.jsonl  gto-history-cf9b54973d27.jsonl  gto-history-console_main.jsonl  gto-history-e7358d0d117d.jsonl  gto-history-ecbe6e3f9e0a.jsonl  gto-history-ef1afdee5c91.jsonl  gto-history-f07e78db243a.jsonl  gto-history-f9de144a9665.jsonl  gto-history-unknown.jsonl  premortem_intent_classification_20260320.md  refactor_agent_compliance.json  refactor_agent_performance.json  refactor_agent_quality.json  refactor_findings_consolidated.json  refactor_plan.json  refactor_plan_review.json  refactor_plan_revised.json  skill-usage.jsonl
core/: __init__.py
docs/: HANDOFF_BREAKDOWN_FIX.md  HANDOFF_DATA_STRUCTURE_FIX.md  HANDOFF_FIELD_NAMES.md  HANDOFF_SKILL_INVOCATION.md  api_reference.md  audit-report.md  checksum-validation.md  data-directory.md  failure-mode-analysis.md  failure-modes-fixes-2026-02-28.md  improvements.md  phase1-summary.md  polish-report.md  priority-fix-2026-02-28.md  quality-checklist.md  structure.md
examples/: README.md  basic_usage.py
hooks/: hooks.json
scripts/: __init__.py  checkpoint_chain.py  checkpoint_ops.py  cli.py  config.py  fix_test_imports.py  migrate.py  models.py  protocol.py  rename_from_checkpoint.py
skill/: SKILL.md
tests/: ACTUAL_COMPACTION_TEST.md  add_non_english_tests.py  conftest.py  test_active_task_state.py  test_canonical_goal_extraction.py  test_checkpoint_chain.py  test_checkpoint_chain_integration.py  test_checkpoint_serialization_regression.py  test_checkpoint_validation_error_paths.py  test_checksum_validation_edge_cases.py  test_cli.py  test_code_fix_e2e.py  test_code_fix_integration.py  test_code_fix_iteration.py  test_compliance_data_retention.py  test_concurrency_compaction.py  test_config.py  test_conflict_detection.py  test_context_gathering_boundaries.py  test_continuation_rule.py  test_correction_message_detection.py  test_dependency_state.py  test_deterministic_checksums.py  test_edge_case_transcripts.py  test_envelope_schema_validation.py  test_examples.py  test_failure_modes.py  test_findings_to_tasks.py  test_git_state.py  test_haiku_conversation_summary.py  test_handoff_context_preservation.py  test_handoff_full_integration.py  test_handoff_hash_verification.py  test_handoff_integration.py  test_handoff_meta_discussion.py  (+67 more)
(+473 files in other folders)
