[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handoff"
version = "0.2.0"
description = "Session handoff management for AI coding environments - capture, restore, and manage conversation state"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CSF NIP", email = "csf@example.com"},
]
keywords = ["handoff", "session", "state", "restore", "ai", "coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

# CLI entry points for package-native commands
[project.scripts]
handoff = "handoff.cli:main"

[project.urls]
Homepage = "https://github.com/csf-nip/handoff"
Documentation = "https://handoff.readthedocs.io"
Repository = "https://github.com/csf-nip/handoff"
Issues = "https://github.com/csf-nip/handoff/issues"

[tool.setuptools.packages.find]
where = ["src"]

# Include skill/ directory for Claude Code integration
[tool.setuptools.package-dir]
"skill" = "skill"

[tool.setuptools.package-data]
handoff = ["py.typed"]
skill = ["**/*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["B011"]  # Allow assert in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [
    "tests_old",
    "tests.backup",
    ".git",
    "__pycache__",
    ".hypothesis",
    ".benchmarks",
]
addopts = [
    "-p",
    "no:cacheprovider",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    "ignore::pytest.PytestWarning",
    "ignore::DeprecationWarning:asyncio.*",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
data_file = "C:/Users/brsth/AppData/Local/Temp/handoff/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
